# ability_idl_tool

./: BUILD.gn  IDL-CPP-GN.md  IDL-CPP.md  Makefile  MakefileLinux  OAT.xml  README.en.md  README.md  bundle.json  idl.gni  idl_config.gni  idl_tool.gni  main.cpp  test_gn.diff
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
ast/: ast_array_type.cpp  ast_array_type.h  ast_boolean_type.cpp  ast_boolean_type.h  ast_byte_type.cpp  ast_byte_type.h  ast_char_type.cpp  ast_char_type.h  ast_double_type.cpp  ast_double_type.h  ast_float_type.cpp  ast_float_type.h  ast_integer_type.cpp  ast_integer_type.h  ast_interface_type.cpp  ast_interface_type.h  ast_list_type.cpp  ast_list_type.h  ast_long_type.cpp  ast_long_type.h  ast_map_type.cpp  ast_map_type.h  (+20 more)
idl_tool_2/test/unittest/: BUILD.gn  options_test.cpp  string_test.cpp
idl_tool_2/test/unittest/ast_test/: BUILD.gn  ast_array_type_test.cpp  ast_attribute_test.cpp  ast_enum_type_test.cpp  ast_expr_test.cpp  ast_interface_type_test.cpp  ast_map_type_test.cpp  ast_method_test.cpp  ast_namespace_test.cpp  ast_test.cpp
idl_tool_2/test/unittest/codegn_sa_cpp_test/: BUILD.gn  code_emitter_test.cpp  sa_cpp_client_proxy_code_emitter_test.cpp  sa_cpp_service_stub_code_emitter_test.cpp
idl_tool_2/test/unittest/codegn_sa_test/: BUILD.gn  code_sa_emitter_test.cpp
idl_tool_2/test/unittest/include/: sa_type_emitter_test.h  test_log.h
idl_tool_2/test/unittest/main_test/: BUILD.gn  main_test.cpp  main_test_macro.cpp
idl_tool_2/test/unittest/mock/: mock_file.cpp  mock_intf_type_check.cpp  mock_options.cpp  mock_parser.cpp  mock_sa_rust_code_emitter.cpp  mock_sa_rust_interface_code_emitter.cpp  mock_sa_ts_client_proxy_code_emitter.cpp  mock_sa_ts_code_emitter.cpp  mock_sa_ts_interface_code_emitter.cpp  mock_sa_ts_service_stub_code_emitter.cpp
idl_tool_2/test/unittest/preprocessor_test/: BUILD.gn  preprocessor_test.cpp
idl_tool_2/test/unittest/resource/: ohos_test.xml
idl_tool_2/test/unittest/resource/idl_src/: ICallback.idl  IFoo.idl  IFooCustom.idl  IFooHilog.idl
idl_tool_2/test/unittest/sa_type_emitter_test/: BUILD.gn  sa_array_type_emitter_test.cpp  sa_boolean_type_emitter_test.cpp  sa_byte_type_emitter_test.cpp  sa_char_type_emitter_test.cpp  sa_cstring_type_emitter_test.cpp  sa_double_type_emitter_test.cpp  sa_enum_type_emitter_test.cpp  sa_fd_type_emitter_test.cpp  sa_fdsan_type_emitter_test.cpp  sa_float_type_emitter_test.cpp  sa_int_type_emitter_test.cpp  sa_interface_type_emitter_test.cpp  sa_long_type_emitter_test.cpp  sa_map_type_emitter_test.cpp  sa_orderedmap_type_emitter_test.cpp  sa_ptr_type_emitter_test.cpp  sa_rawdata_type_emitter_test.cpp  sa_seq_type_emitter_test.cpp  sa_set_type_emitter_test.cpp  sa_short_type_emitter_test.cpp  sa_string_type_emitter_test.cpp  sa_struct_type_emitter_test.cpp  sa_u16string_type_emitter_test.cpp  sa_uchar_type_emitter_test.cpp  sa_uint_type_emitter_test.cpp  sa_ulong_type_emitter_test.cpp  sa_union_type_emitter_test.cpp  sa_ushort_type_emitter_test.cpp
idl_tool_2/test/unittest/src/: sa_type_emitter_test.cpp
idl_tool_2/test/unittest/util_test/: options_test.cpp  string_test.cpp
test/native/: BUILD.gn  IIdlTestService.idl
test/native/idl_sa_test/: BUILD.gn  idl_sa_client_test.cpp  listen_test.cfg
test/native/idl_sa_test/listen_ability/: BUILD.gn  IFooCustom.idl  IListenAbility.idl
test/native/idl_sa_test/listen_ability/include/: listen_ability.h  my_rawdata.h
test/native/idl_sa_test/listen_ability/src/: listen_ability.cpp
test/native/idl_sa_test_macro_hilog/: BUILD.gn  idl_sa_client_test.cpp  idl_sa_client_test_macro_hilog.cpp  listen_test.json
test/native/idl_sa_test_macro_hilog/listen_ability/: BUILD.gn  IFooCustomMacroHilog.idl  IListenAbilityMacroHilog.idl
test/native/idl_sa_test_macro_hilog/listen_ability/include/: listen_ability.h  my_rawdata.h
test/native/idl_sa_test_macro_hilog/listen_ability/src/: listen_ability.cpp
test/native/idl_sa_test_ptr/: BUILD.gn  idl_sa_unit_test_ptr.cpp
test/native/idl_sa_test_ptr/listen_ability/: BUILD.gn  IFooPtr.idl
test/native/idl_sa_test_ptr/listen_ability/include/: listen_ability.h  my_seq.h
test/native/idl_sa_test_ptr/listen_ability/src/: listen_ability.cpp  my_seq.cpp
test/native/include/: idl_test_service_stub.h  test_client.h  test_service.h
test/native/src/: main_client.cpp  main_server.cpp  test_client.cpp  test_service.cpp
test/rust/moduletest/client/: BUILD.gn
test/rust/moduletest/client/src/: main.rs
test/unittest/: BUILD.gn
test/unittest/ast_interface_type_test/: BUILD.gn  ast_interface_type_test.cpp
test/unittest/ast_method_test/: BUILD.gn  ast_method_test.cpp
test/unittest/ast_module_test/: BUILD.gn  ast_module_test.cpp
test/unittest/ast_namespace_test/: BUILD.gn  ast_namespace_test.cpp
test/unittest/ast_node_test/: BUILD.gn  ast_node_test.cpp
test/unittest/ast_parameter_test/: BUILD.gn  ast_parameter_test.cpp
test/unittest/ast_sequenceable_type_test/: BUILD.gn  ast_sequenceable_type_test.cpp
test/unittest/ast_type_test/: BUILD.gn  ast_type_test.cpp
test/unittest/cacheable2_test/: BUILD.gn  cacheable2_test.cpp  cacheable_common.h  cacheable_idl.h
test/unittest/cacheable_test/: BUILD.gn  cacheable_common.h  cacheable_idl.h  cacheable_test.cpp
test/unittest/codegen_code_generator_test/: BUILD.gn  codegen_code_generator_test.cpp
test/unittest/cpp_code_emitter_test/: BUILD.gn  cpp_code_emitter_test.cpp
test/unittest/idl_sa_test/: BUILD.gn  idl_sa_client_test.cpp
test/unittest/idl_sa_test/listen_ability/: BUILD.gn  IListenAbility.idl
test/unittest/idl_sa_test/listen_ability/include/: listen_ability.h
test/unittest/idl_sa_test/listen_ability/src/: listen_ability.cpp
test/unittest/lexer_test/: BUILD.gn  lexer_test.cpp
test/unittest/metadata_dumper_test/: BUILD.gn  metadata_dumper_test.cpp
test/unittest/metadata_reader_test/: BUILD.gn  metadata_reader_test.cpp
test/unittest/metadata_serializer_test/: BUILD.gn  metadata_serializer_test.cpp
test/unittest/util_options_test/: BUILD.gn  options_test.cpp
test/unittest/util_string_test/: BUILD.gn  util_string_test.cpp
(+2773 files in other folders)
