# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
group("unittest") {
  testonly = true
  deps = []

  deps += [
    "ast_interface_type_test:unittest",
    "ast_method_test:unittest",
    "ast_module_test:unittest",
    "ast_namespace_test:unittest",
    "ast_node_test:unittest",
    "ast_parameter_test:unittest",
    "ast_sequenceable_type_test:unittest",
    "ast_type_test:unittest",
    "lexer_test:unittest",
  ]
}
